--- a/hql-enonce/pom.xml
+++ b/hql-enonce/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.test.hql</groupId>
-	<artifactId>hql-fin</artifactId>
+	<artifactId>hql-enonce</artifactId>
 	<version>1.0</version>
 	<name>hql-enonce</name>
 	<packaging>jar</packaging>
